fix option wrap

--- a/src/main/webapp/app/styles/app.css
+++ b/src/main/webapp/app/styles/app.css
@@ -112,6 +112,16 @@ form .required {
   float: left;
   margin-right: 10px;
 }
+.question-options .option-content {
+  float: left;
+  word-wrap:break-word;
+  word-break:break-all;
+  width: 90%;
+  line-height: 1.2em;
+}
+.question-options .clear {
+  clear: both;
+}
 .question-navigation {
   padding: 15px 0;
   text-align: left;
@@ -200,7 +210,7 @@ form .required {
     width: 44px;
   }
   .question-navigation {
-    padding: 0 30px;
+    padding: 0 20px;
   }
   .question-timerWrapper {
     margin-bottom: 15px;
